trying to fix flexbox wrapping issues in safari

--- a/portfolio-site/stylesheets/main.scss
+++ b/portfolio-site/stylesheets/main.scss
@@ -41,7 +41,7 @@ header {
 .half {
   width: 50%;
   min-width: 400px;
-  
+
 }
 
 #criagslist-display{
@@ -350,7 +350,7 @@ border-bottom: 3px solid white;
 
     display: flex;
     justify-content: center;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
     flex-wrap: wrap;
     margin-bottom: 60px;
@@ -358,7 +358,7 @@ border-bottom: 3px solid white;
     .card {
 
      width: 200px;
-      margin: 15px;
+      margin: 20px;
       text-align: center;
       transition: 1s;
       .top-icon {
