--- a/portfolio-site/stylesheets/partials/_CL.scss
+++ b/portfolio-site/stylesheets/partials/_CL.scss
@@ -76,6 +76,7 @@
   .words {
     width: 50%;
     min-width: 300px;
+    margin: 10px;
     a {
       text-decoration: none;
       color: #333;
@@ -86,7 +87,6 @@
         margin-top: 30px;
       }
     }
-
   h1 {
   text-align: right;
 }
@@ -95,6 +95,9 @@
 text-align: center;
   width: 40%;
     min-width: 300px;
+    margin: 10px;
+    -webkit-flex: 1 1 15em;
+    align-self: flex-end;
   img {
     position: relative;
     margin-bottom: 10px;
