--- a/portfolio-site/stylesheets/partials/_breakpoints.scss
+++ b/portfolio-site/stylesheets/partials/_breakpoints.scss
@@ -21,6 +21,10 @@
   }
 
 @media (max-width: 700px) {
+
+  .hero .project-info {
+    padding-top: 150px;
+  }
   .background {
     margin-top: 50px;
   }
