--- a/portfolio-site/stylesheets/partials/_tc.scss
+++ b/portfolio-site/stylesheets/partials/_tc.scss
@@ -12,7 +12,6 @@ background-position:top;
   padding-top: 250px;
 }
 #tc-part-2{
-    padding: 60px 10% 60px 10%;
     video {
       box-shadow: 1px 2px 6px rgba(033, 033, 033, .5);
     }
